Bug fix: horizontal scrolling in emo result widget

--- a/app/dashboard/emotions/highest_emotion.sass
+++ b/app/dashboard/emotions/highest_emotion.sass
@@ -6,6 +6,7 @@
 
 
 
-.widget .highestEmotion .emotions.result
-  overflow: visible
+.highestEmotion .widget .emotions.result
+  h3
+    margin-right: 0
 
